[package]
name = "la"
version = "0.2.0"
authors = ["Sami Nopanen <snopanen@gmail.com>"]
license = "Apache-2.0"
description = "Linear algebra library for the Rust programming language."
documentation = "http://xasmx.github.io/rust-la/doc/la/index.html"
homepage = "https://github.com/xasmx/rust-la"
repository = "https://github.com/xasmx/rust-la"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
rand = "0.3"
num = "0.1"
simd = { git = "https://github.com/huonw/simd" }
opencl = { git = "https://github.com/luqmana/rust-opencl" }

